<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.example</groupId>
    <artifactId>parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>parent</name>

    <properties>
        <app.version>1.0-SNAPSHOT</app.version>

        <java.version>1.7</java.version>
        <android.version>L_r4</android.version>
        <android.api.level>L</android.api.level>
        <spoon.version>1.1.1</spoon.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>app</module>
        <module>espresso-tests</module>
    </modules>

    <repositories>
        <repository>
            <id>android-support-repository</id>
            <url>file:///${env.ANDROID_HOME}/extras/android/m2repository/</url>
        </repository>
        <repository>
            <id>google-repository</id>
            <url>file:///${env.ANDROID_HOME}/extras/google/m2repository/</url>
        </repository>
        <repository>
            <id>oss-sonatype</id>
            <name>oss-sonatype</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>android</groupId>
                <artifactId>android</artifactId>
                <version>${android.version}</version>
                <scope>provided</scope>
                <exclusions>
                    <exclusion>
                        <groupId>junit</groupId>
                        <artifactId>junit</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.hamcrest</groupId>
                        <artifactId>hamcrest-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.11</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.robolectric</groupId>
                <artifactId>robolectric</artifactId>
                <version>2.4-SNAPSHOT</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.google.android</groupId>
                <artifactId>espresso</artifactId>
                <version>1.1</version>
            </dependency>

            <dependency>
                <groupId>com.squareup.spoon</groupId>
                <artifactId>spoon-client</artifactId>
                <version>${spoon.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>junit</groupId>
                        <artifactId>junit</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <extensions>true</extensions>
                    <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                    <artifactId>android-maven-plugin</artifactId>
                    <version>3.9.0-rc.3</version>
                    <configuration>
                        <extractDuplicates>true</extractDuplicates>
                        <sdk>
                            <platform>${android.api.level}</platform>
                        </sdk>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.17</version>
                    <configuration>
                        <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                        <workingDirectory>../</workingDirectory>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
